# FPCalyzer

./: LICENSE.md  README.md  pyproject.toml
fpcalyzer/: application.py  clustering.py  color_util.py
fpcalyzer/data/: my_colors.csv
fpcalyzer/templates/: color_pallate.html  index.html
fpcalyzer/util/: __init__.py  color_util.py  html_util.py
